Much improved portfolio, need to remove space at top, fix font/line sizes when resizing dynamically, spacing on bottom padding/margin

--- a/styles.css
+++ b/styles.css
@@ -1,38 +1,67 @@
-body, html {
+body {
   height: 100%;
   width: 100%;
   margin: 0;
 }
 
 .container {
-  max-width: 960px;
+  max-width: 100%;
   margin: 0 auto;
-  
+  text-align: center;
 }
 
+span {
+  font-size: 50px;
+}
 
+button {
+  text-align: center;
+}
+
+.twitter {
+  color: black;
+}
+
+.linkedin {
+  color: black;
+}
+
+.github {
+  color: black;
+}
+
+.email {
+  color: black;
+}
+
+a:hover {
+  color: red;
+  font-size: 150%;
+}
 
 section.module:last-child {
   margin-bottom: 0;
 }
 section.module h2 {
   margin-bottom: 40px;
-  font-family: "Roboto Slab", serif;
+  font-family: 'LeagueGothicRegular', arial, helvetica;
   font-size: 30px;
 }
 section.module p {
   margin-bottom: 40px;
   font-size: 16px;
   font-weight: 300;
+  font-family: 'LeagueGothicRegular', arial, helvetica;
 }
 section.module p:last-child {
   margin-bottom: 0;
+  font-family: 'LeagueGothicRegular', arial, helvetica;
 }
 section.module.content {
-  padding: 40px 0;
+  padding: 10px 0;
 }
 section.module.parallax {
-  height: 600px;
+  height: 400px;
   background-position: 50% 50%;
   background-repeat: no-repeat;
   background-attachment: fixed;
@@ -42,16 +71,15 @@ section.module.parallax {
 section.module.parallax h1 {
   color: rgba(255, 255, 255, 0.8);
   font-size: 48px;
-  line-height: 300px;
+  line-height: 400px;
   font-weight: 700;
   text-align: center;
   text-transform: uppercase;
   text-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
-  
+  font-family: 'LeagueGothicRegular', arial, helvetica;
 }
 section.module.parallax-1 {
   background-image: url("http://pictdesktop.com/wp-content/uploads/2015/01/Photoshoot-high-resolution-wallpaper-free-with-sunrise-photo.jpg");
- 
 }
 section.module.parallax-2 {
   background-image: url("http://static.wallpedes.com/wallpaper/download/download-picstopin-aurora-space-high-resolution-wallpaper-wallpaper-space-high-resolution-download-picstopin-aurora.jpg");
